# solana-ua-bootcamp-2024-08-06

./: .env  .gitignore  task-6-exact-name-pubkey-generator.ts
practice-1/: check-balance.ts
practice-2/: create-token-account.ts  create-token-metadata.ts  mint-tokens.ts  send-sol.ts
practice-2/rust-solana-tasks/solana-tasks/: .env  Cargo.toml
practice-2/send-sol/: Cargo.toml
practice-2/send-sol/src/: main.rs
