[package]
name = "solana-tasks"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.16.15"
solana-sdk = "1.16.15"
spl-token = "3.5.0"
dotenv = "0.15"
spl-associated-token-account = "1.1.3"
mpl-token-metadata = "1.2.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
